# bs_bet

./: Anchor.toml  README.md  package.json
client/: .eslintrc.json  README.md  next.config.js  next.config.ts  package-lock.json  package.json  plan.md  program_integration.md  tailwind.config.js
client/src/: middleware.ts
client/src/app/: globals.css  layout.tsx  middleware.ts  page.tsx
client/src/components/: BetForm.tsx  Navbar.tsx  PriceTracker.tsx  UserProfile.tsx  bs_bet.json  bs_bet.ts  user.tsx
client/src/hooks/: useSolanaWallet.ts  useWalletBalance.ts
client/src/styles/: globals.css
client/src/utils/: signUtils.ts
programs/bs_bet/: Cargo.toml
programs/bs_bet/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/bs_bet/src/context/: bet.rs  mod.rs  profile.rs
programs/bs_bet/src/context/rollup/: delegate_active_bet.rs  delegate_auth_state.rs  delegate_user_profile.rs  manage_delegation.rs  mod.rs  open_bet_ephemeral.rs  resolve_bet_ephemeral.rs  undelegate_from_magicblock.rs
tests/: bs_bet.ts
